--- a/index.html
+++ b/index.html
@@ -164,6 +164,17 @@
 <footer>
   &copy; 2025 Mese de Sticlă Premium - Toate drepturile rezervate
 </footer>
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const cards = document.querySelectorAll(".product");
+    cards.forEach((card, index) => {
+      setTimeout(() => {
+        card.classList.add("fade-in");
+      }, 200 * index);
+    });
+  });
+</script>
+
 
 </body>
 </html>
