--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
+  <link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mese de Sticlă Premium</title>
@@ -126,6 +132,9 @@
   </style>
 </head>
 <body>
+  <h2>Unde ne găsești?</h2>
+<div id="map" style="height: 400px; border-radius: 16px; margin-bottom: 40px;"></div>
+
   <div class="container">
   <h1>Mese de Sticlă Premium</h1>
 
