--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="details">
       <h2>Masa Elegantă din Sticlă</h2>
       <p>Sticlă securizată, picior din metal premium, design modern 2026. Disponibilă la comandă.</p>
-      <a class="btn" href="https://wa.me/40700000000?text=Salut!%20Vreau%20mai%20multe%20detalii%20despre%20masa%20eleganta%20din%20sticla.">Contactează pe WhatsApp</a>
+      <a class="btn" href="https://wa.me/+40 745 814 800?text=Salut!%20Vreau%20mai%20multe%20detalii%20despre%20masa%20eleganta%20din%20sticla.">Contactează pe WhatsApp</a>
     </div>
   </div>
 
@@ -163,7 +163,7 @@
     <div class="details">
       <h2>Masa Minimalistă</h2>
       <p>Design simplu, sticlă clară și picioare din lemn masiv. Ideală pentru spații moderne.</p>
-      <a class="btn" href="https://wa.me/40700000000?text=Salut!%20Sunt%20interesat%20de%20masa%20minimalista.%20Aș%20vrea%20mai%20multe%20detalii.">Contactează pe WhatsApp</a>
+      <a class="btn" href="https://wa.me/+40 745 814 800?text=Salut!%20Sunt%20interesat%20de%20masa%20minimalista.%20Aș%20vrea%20mai%20multe%20detalii.">Contactează pe WhatsApp</a>
     </div>
   </div>
 </div>
@@ -199,7 +199,7 @@
     <div class="details">
       <h2>Masa Neagră Elegantă</h2>
       <p>Dimensiuni: 140x70cm<br>Sticlă fumurie cu margini rotunjite<br>Preț: 1700 RON</p>
-      <a class="btn" href="https://wa.me/40712345678?text=Salut,%20sunt%20interesat%20de%20masa%20neagră%201400x700" target="_blank">Comandă pe WhatsApp</a>
+      <a class="btn" href="https://wa.me/+40 745 814 800?text=Salut,%20sunt%20interesat%20de%20masa%20neagră%201400x700" target="_blank">Comandă pe WhatsApp</a>
     </div>
   </div>
 
