--- a/index.html
+++ b/index.html
@@ -287,7 +287,9 @@
   marker.bindPopup("<b>Mese Sticlă Craiova</b><br>Atelier & Showroom").openPopup();
 </script>
 
+  <script src="script.js"></script>
 
 </body>
 </html>
 
+<div id="galerie" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4"></div>
