--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     }
   </style>
 </head>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
 <body>
   <h2>Unde ne găsești?</h2>
 <div id="map" style="height: 400px; border-radius: 16px; margin-bottom: 40px;"></div>
@@ -288,6 +289,7 @@
 </script>
 
   <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 
 </body>
 </html>
