--- a/index.html
+++ b/index.html
@@ -1,378 +1,149 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <link
-  rel="stylesheet"
-  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-/>
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mese de Sticlă Premium</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Set Masa Extensibilă 3D cu Blat De Sticlă</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #1e1e2f;
-      color: #f2f2f2;
-      line-height: 1.6;
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f9f9f9;
+      color: #333;
     }
-
     header {
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      padding: 60px 20px;
       text-align: center;
-      color: #ffffff;
+      margin-bottom: 20px;
     }
-
-    header h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
+    h1 {
+      color: #2c3e50;
     }
-
-    header p {
-      font-size: 1.2em;
-      opacity: 0.8;
+    .info {
+      background: #fff;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      max-width: 600px;
+      margin: 0 auto 30px;
     }
-
-    .container {
-      max-width: 1200px;
-      margin: auto;
-      padding: 40px 20px;
+    .info p {
+      margin: 8px 0;
+      line-height: 1.4;
     }
-
-    .product {
-      background: rgba(255, 255, 255, 0.03);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 16px;
-      margin-bottom: 40px;
-      overflow: hidden;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease;
-    }
-
-    .product:hover {
-      transform: scale(1.01);
-    }
-
-    .product img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-
-    .details {
-      padding: 24px;
-    }
-
-    .details h2 {
-      font-size: 1.6em;
-      color: #00c9a7;
-      margin-bottom: 10px;
-    }
-
-    .details p {
-      color: #ccc;
-    }
-
-    .btn {
-      display: inline-block;
-      margin-top: 16px;
-      background-color: #00c9a7;
-      color: #fff;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 10px;
-      text-decoration: none;
+    .contact {
       font-weight: bold;
-      transition: background 0.3s ease;
+      color: #27ae60;
+      font-size: 1.1em;
     }
-
-    .btn:hover {
-      background-color: #00b498;
+    .gallery {
+      max-width: 1000px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 15px;
     }
-
-    .map {
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-      margin-top: 60px;
+    .gallery img {
+      width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+      transition: transform 0.3s ease;
+      cursor: pointer;
     }
-
-    footer {
-      background-color: #12121c;
-      color: #888;
-      text-align: center;
-      padding: 30px;
-      margin-top: 60px;
-      font-size: 0.9em;
+    .gallery img:hover {
+      transform: scale(1.05);
     }
-
-    @media (max-width: 768px) {
-      header h1 {
-        font-size: 2em;
-      }
-
-      .details h2 {
-        font-size: 1.3em;
-      }
-
-      .btn {
-        font-size: 0.95em;
-      }
+    .whatsapp {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25d366;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      z-index: 1000;
+    }
+    .whatsapp:hover {
+      background-color: #1ebe57;
+    }
+    .whatsapp svg {
+      width: 35px;
+      height: 35px;
+      fill: white;
     }
   </style>
 </head>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
 <body>
-  <div class="slider" onmouseover="pauseSlider()" onmouseout="resumeSlider()">
-  <img src="img/masa-sticla1.jpg" class="slide active" alt="Masa sticla 1">
-  <img src="img/masa-sticla2.jpg" class="slide" alt="Masa sticla 2">
-  <img src="img/masa-sticla3.jpg" class="slide" alt="Masa sticla 3">
-  <img src="img/masa-sticla4.jpg" class="slide" alt="Masa sticla 4">
-  <img src="img/masa-sticla5.jpg" class="slide" alt="Masa sticla 5">
-  <img src="img/masa-sticla6.jpg" class="slide" alt="Masa sticla 6">
-  <img src="img/masa-sticla7.jpg" class="slide" alt="Masa sticla 7">
-  <img src="img/masa-sticla8.jpg" class="slide" alt="Masa sticla 8">
-  <img src="img/masa-sticla9.jpg" class="slide" alt="Masa sticla 9">
-  <img src="img/masa-sticla10.jpg" class="slide" alt="Masa sticla 10">
-  <img src="img/masa-sticla11.jpg" class="slide" alt="Masa sticla 11">
-  <img src="img/masa-sticla12.jpg" class="slide" alt="Masa sticla 12">
-  <img src="img/masa-sticla13.jpg" class="slide" alt="Masa sticla 13">
-  <img src="img/masa-sticla14.jpg" class="slide" alt="Masa sticla 14">
-  <img src="img/masa-sticla15.jpg" class="slide" alt="Masa sticla 15">
-  <img src="img/masa-sticla16.jpg" class="slide" alt="Masa sticla 16">
-  <img src="img/masa-sticla17.jpg" class="slide" alt="Masa sticla 17">
-  <img src="img/masa-sticla18.jpg" class="slide" alt="Masa sticla 18">
-  <img src="img/masa-sticla19.jpg" class="slide" alt="Masa sticla 19">
-  <img src="img/masa-sticla20.jpg" class="slide" alt="Masa sticla 20">
-  <img src="img/masa-sticla21.jpg" class="slide" alt="Masa sticla 21">
-  <img src="img/masa-sticla22.jpg" class="slide" alt="Masa sticla 22">
-  <img src="img/masa-sticla23.jpg" class="slide" alt="Masa sticla 23">
-  <img src="img/masa-sticla24.jpg" class="slide" alt="Masa sticla 24">
-  <img src="img/masa-sticla25.jpg" class="slide" alt="Masa sticla 25">
-  <img src="img/masa-sticla26.jpg" class="slide" alt="Masa sticla 26">
-  <img src="img/masa-sticla27.jpg" class="slide" alt="Masa sticla 27">
-  <img src="img/masa-sticla28.jpg" class="slide" alt="Masa sticla 28">
-
-  <button class="prev" onclick="prevSlide()">&#10094;</button>
-  <button class="next" onclick="nextSlide()">&#10095;</button>
-</div>
-
-  <h2>Unde ne găsești?</h2>
-<div id="map" style="height: 400px; border-radius: 16px; margin-bottom: 40px;"></div>
-
-  
-
 
 <header>
-  <h1>Mese de Sticlă Premium</h1>
-  <p>Design modern pentru case elegante</p>
+  <h1>Set Masa Extensibilă 3D cu Blat De Sticlă + 6 Scaune Piele Eco</h1>
 </header>
 
-<div class="container">
+<section class="info">
+  <p><strong>Preț:</strong> 1150 Lei adusă acasă cu verificare și transport inclus.</p>
+  <p>Dacă doriți nume, adresă și nr. telefon, vă rog să mă contactați.</p>
+  <p><strong>Dimensiuni:</strong></p>
+  <ul>
+    <li>Lungime Extinsă: 170 cm</li>
+    <li>Lungime Strânsă: 130 cm</li>
+    <li>Lățime: 80 cm</li>
+    <li>Înălțime: 76 cm</li>
+  </ul>
+  <p>Schelet metalic.</p>
+  <p><strong>Plata se face la primirea coletului după VERIFICARE.</strong></p>
+  <p class="contact">
+    📲 Telefon: <a href="tel:+407466645997">0746 664 597</a>, <a href="tel:+40745814800">0745 814 800</a>
+  </p>
+  <p><strong>💥💥🚛 Transport în toată țara! 💥</strong></p>
+</section>
 
-  <!-- PRODUS 1 -->
-<div class="product fade-in">
-  <div class="slider" onmouseover="pauseSlider()" onmouseout="resumeSlider()">
-    <img src="img/masa1.jpg" class="slide active" alt="Masa 1">
-    <img src="img/masa1_2.jpg" class="slide" alt="Masa 1 - poză secundară">
-    <img src="img/masa1_3.jpg" class="slide" alt="Masa 1 - poză 3">
-    <button class="prev" onclick="prevSlide()">&#10094;</button>
-    <button class="next" onclick="nextSlide()">&#10095;</button>
-  </div>
-  <div class="details">
-    <h2>Masa Elegantă din Sticlă</h2>
-    <p>Sticlă securizată, picior din metal premium, design modern 2026. Disponibilă la comandă.</p>
-    <a class="btn" href="https://wa.me/40745814800?text=Salut!%20Vreau%20mai%20multe%20detalii%20despre%20masa%20eleganta%20din%20sticla.">Comandă pe WhatsApp</a>
-  </div>
-</div>
+<section class="gallery">
+  <img src="poze/masa-sticla1.jpg" alt="Masa extensibilă 1" />
+  <img src="poze/masa-sticla2.jpg" alt="Masa extensibilă 2" />
+  <img src="poze/masa-sticla3.jpg" alt="Masa extensibilă 3" />
+  <img src="poze/masa-sticla4.jpg" alt="Masa extensibilă 4" />
+  <img src="poze/masa-sticla5.jpg" alt="Masa extensibilă 5" />
+  <img src="poze/masa-sticla6.jpg" alt="Masa extensibilă 6" />
+  <img src="poze/masa-sticla7.jpg" alt="Masa extensibilă 7" />
+  <img src="poze/masa-sticla8.jpg" alt="Masa extensibilă 8" />
+  <img src="poze/masa-sticla9.jpg" alt="Masa extensibilă 9" />
+  <img src="poze/masa-sticla10.jpg" alt="Masa extensibilă 10" />
+  <img src="poze/masa-sticla11.jpg" alt="Masa extensibilă 11" />
+  <img src="poze/masa-sticla12.jpg" alt="Masa extensibilă 12" />
+  <img src="poze/masa-sticla13.jpg" alt="Masa extensibilă 13" />
+  <img src="poze/masa-sticla14.jpg" alt="Masa extensibilă 14" />
+  <img src="poze/masa-sticla15.jpg" alt="Masa extensibilă 15" />
+  <img src="poze/masa-sticla16.jpg" alt="Masa extensibilă 16" />
+  <img src="poze/masa-sticla17.jpg" alt="Masa extensibilă 17" />
+  <img src="poze/masa-sticla18.jpg" alt="Masa extensibilă 18" />
+  <img src="poze/masa-sticla19.jpg" alt="Masa extensibilă 19" />
+  <img src="poze/masa-sticla20.jpg" alt="Masa extensibilă 20" />
+  <img src="poze/masa-sticla21.jpg" alt="Masa extensibilă 21" />
+  <img src="poze/masa-sticla22.jpg" alt="Masa extensibilă 22" />
+  <img src="poze/masa-sticla23.jpg" alt="Masa extensibilă 23" />
+  <img src="poze/masa-sticla24.jpg" alt="Masa extensibilă 24" />
+  <img src="poze/masa-sticla25.jpg" alt="Masa extensibilă 25" />
+  <img src="poze/masa-sticla26.jpg" alt="Masa extensibilă 26" />
+  <img src="poze/masa-sticla27.jpg" alt="Masa extensibilă 27" />
+  <img src="poze/masa-sticla28.jpg" alt="Masa extensibilă 28" />
+</section>
 
-
-  <!-- PRODUS 2 -->
-  <div class="product">
-    <img src="https://via.placeholder.com/1200x600?text=Masa+Sticla+2" alt="Masa 2">
-    <div class="details">
-      <h2>Masa Neagră Elegantă</h2>
-      <p>Dimensiuni: 140x70cm<br>Sticlă fumurie cu margini rotunjite<br>Preț: 1700 RON</p>
-      <a class="btn" href="https://wa.me/40745814800?text=Salut!%20Sunt%20interesat%20de%20masa%20minimalista.%20Aș%20vrea%20mai%20multe%20detalii.">Comandă pe WhatsApp</a>
-    </div>
-  </div>
-
-</div>
-
-<footer>
-  &copy; 2025 Mese de Sticlă Premium - Toate drepturile rezervate
-</footer>
-  <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const cards = document.querySelectorAll(".product");
-    cards.forEach((card, index) => {
-      setTimeout(() => {
-        card.classList.add("fade-in");
-      }, 200 * index);
-    });
-  });
-</script>
-
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const sliders = document.querySelectorAll('.slider');
-
-    sliders.forEach((slider) => {
-      let slides = slider.querySelectorAll('.slide');
-      let currentSlide = 0;
-      let interval;
-
-      function showSlide(index) {
-        slides.forEach((slide, i) => {
-          slide.classList.remove('active');
-          if (i === index) slide.classList.add('active');
-        });
-      }
-
-      function nextSlide() {
-        currentSlide = (currentSlide + 1) % slides.length;
-        showSlide(currentSlide);
-      }
-
-      function prevSlide() {
-        currentSlide = (currentSlide - 1 + slides.length) % slides.length;
-        showSlide(currentSlide);
-      }
-
-      slider.querySelector('.next').addEventListener('click', () => {
-        pauseSlider();
-        nextSlide();
-        resumeSlider();
-      });
-
-      slider.querySelector('.prev').addEventListener('click', () => {
-        pauseSlider();
-        prevSlide();
-        resumeSlider();
-      });
-
-      function pauseSlider() {
-        clearInterval(interval);
-      }
-
-      function resumeSlider() {
-        interval = setInterval(nextSlide, 4000);
-      }
-
-      slider.addEventListener('mouseover', pauseSlider);
-      slider.addEventListener('mouseout', resumeSlider);
-
-      // Initialize slider
-      showSlide(currentSlide);
-      resumeSlider();
-    });
-  });
-</script>
-
-  <script>
-  const map = L.map('map').setView([45.7489, 21.2087], 13); // coordonate Craiova (exemplu)
-
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-  }).addTo(map);
-
-  const marker = L.marker([45.7489, 21.2087]).addTo(map);
-  marker.bindPopup("<b>Mese Sticlă Craiova</b><br>Atelier & Showroom").openPopup();
-</script>
-
-  <script src="script.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
-<script>
-  let slideIndex = 0;
-  let slides = document.querySelectorAll(".slide");
-
-  function showSlide(index) {
-    slides.forEach(slide => slide.classList.remove("active"));
-    slides[index].classList.add("active");
-  }
-
-  function nextSlide() {
-    slideIndex = (slideIndex + 1) % slides.length;
-    showSlide(slideIndex);
-  }
-
-  function prevSlide() {
-    slideIndex = (slideIndex - 1 + slides.length) % slides.length;
-    showSlide(slideIndex);
-  }
-
-  let interval = setInterval(nextSlide, 3000);
-
-  function pauseSlider() {
-    clearInterval(interval);
-  }
-
-  function resumeSlider() {
-    interval = setInterval(nextSlide, 3000);
-  }
-
-  document.addEventListener("DOMContentLoaded", () => {
-    showSlide(slideIndex);
-  });
-</script>
+<!-- Buton WhatsApp fixat jos dreapta -->
+<a 
+  href="https://wa.me/40745814800" 
+  target="_blank" 
+  rel="noopener" 
+  class="whatsapp" 
+  aria-label="Contact WhatsApp">
+  <svg viewBox="0 0 24 24" >
+    <path d="M20.52 3.48a11.89 11.89 0 0 0-16.82 0 11.93 11.93 0 0 0-3.5 8.49c0 2.1.55 4.15 1.6 5.96L2 22l4.13-1.08a11.94 11.94 0 0 0 6.39 1.86h.02c6.59 0 11.95-5.36 11.95-11.96a11.94 11.94 0 0 0-3.97-8.34Zm-8.54 15.22a9.9 9.9 0 0 1-5.06-1.4l-.36-.22-3.08.8.82-3.02-.23-.36a9.88 9.88 0 0 1-1.52-5.41 9.94 9.94 0 0 1 17.2-6.8 9.94 9.94 0 0 1-7.03 16.58Zm5.4-7.68c-.3-.15-1.76-.87-2.03-.97-.27-.1-.47-.15-.67.15s-.77.97-.95 1.17-.35.22-.65.07a6.94 6.94 0 0 1-2.04-1.26 7.68 7.68 0 0 1-1.43-1.76c-.15-.27 0-.42.12-.56.12-.12.27-.31.4-.47.13-.16.18-.28.27-.47.09-.2.04-.37-.02-.52-.06-.15-.66-1.6-.9-2.2-.23-.57-.47-.5-.67-.51-.17 0-.37 0-.56 0-.18 0-.47.07-.72.36-.25.28-1 1-1 2.47 0 1.47 1.03 2.9 1.18 3.11.15.2 2.04 3.11 4.95 4.36.69.3 1.23.48 1.65.62.69.23 1.32.2 1.82.12.56-.1 1.76-.72 2.01-1.41.25-.7.25-1.3.18-1.41-.06-.12-.25-.2-.56-.35Z"/>
+  </svg>
+</a>
 
 </body>
 </html>
-
-<div id="galerie" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4"></div>
-<style>
-.slider {
-  position: relative;
-  max-width: 100%;
-  height: 500px;
-  overflow: hidden;
-}
-
-.slide {
-  display: none;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.slide.active {
-  display: block;
-}
-
-.prev, .next {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(0,0,0,0.5);
-  color: white;
-  padding: 10px;
-  border: none;
-  cursor: pointer;
-  font-size: 24px;
-  z-index: 1;
-}
-
-.prev {
-  left: 10px;
-}
-
-.next {
-  right: 10px;
-}
-
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-</style>
-
