--- a/index.html
+++ b/index.html
@@ -3,56 +3,95 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Set Masa Extensibilă 3D cu Blat De Sticlă</title>
+  <title>Promoție Masă Extensibilă + Scaune</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #f9f9f9;
-      color: #333;
+      margin: 0; padding: 0;
+      background: #f0f0f0;
+      color: #222;
     }
+
     header {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    .info {
-      background: #fff;
+      background: #005a87;
+      color: white;
       padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-      max-width: 600px;
-      margin: 0 auto 30px;
-    }
-    .info p {
-      margin: 8px 0;
-      line-height: 1.4;
-    }
-    .contact {
+      text-align: center;
+      font-size: 1.8em;
       font-weight: bold;
-      color: #27ae60;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 30px auto;
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    /* Secțiunea info masă */
+    .masa-info {
+      border: 2px solid #005a87;
+      padding: 20px;
+      border-radius: 10px;
+      background: #e6f2fb;
+      margin-bottom: 30px;
+    }
+
+    .masa-info h2 {
+      color: #004466;
+      margin-bottom: 15px;
+    }
+
+    .masa-info ul {
+      list-style-type: disc;
+      margin-left: 20px;
+      margin-bottom: 15px;
+    }
+
+    .masa-info p {
       font-size: 1.1em;
     }
-    .gallery {
-      max-width: 1000px;
-      margin: 0 auto;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-      gap: 15px;
+
+    .masa-info em {
+      color: #aa0000;
+      font-weight: bold;
     }
+
+    .masa-info a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+
+    .masa-info a:hover {
+      text-decoration: underline;
+    }
+
+    /* Galerie poze */
+    .gallery {
+      display: flex;
+      gap: 15px;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-bottom: 30px;
+    }
+
     .gallery img {
-      width: 100%;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+      max-width: 250px;
+      border-radius: 10px;
+      border: 2px solid #ccc;
       transition: transform 0.3s ease;
       cursor: pointer;
     }
+
     .gallery img:hover {
       transform: scale(1.05);
+      border-color: #005a87;
     }
-    .whatsapp {
+
+    /* Buton WhatsApp fixat jos-dreapta */
+    .whatsapp-button {
       position: fixed;
       bottom: 20px;
       right: 20px;
@@ -65,85 +104,72 @@
       align-items: center;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       cursor: pointer;
-      transition: background-color 0.3s ease;
       z-index: 1000;
+      transition: background-color 0.3s ease;
     }
-    .whatsapp:hover {
-      background-color: #1ebe57;
+
+    .whatsapp-button:hover {
+      background-color: #128c45;
     }
-    .whatsapp svg {
+
+    .whatsapp-button img {
       width: 35px;
       height: 35px;
-      fill: white;
     }
+
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Set Masa Extensibilă 3D cu Blat De Sticlă + 6 Scaune Piele Eco</h1>
-</header>
+  <header>
+    Set Masa Extensibilă 3D cu Blat De Sticlă + 6 Scaune
+  </header>
 
-<section class="info">
-  <p><strong>Preț:</strong> 1150 Lei adusă acasă cu verificare și transport inclus.</p>
-  <p>Dacă doriți nume, adresă și nr. telefon, vă rog să mă contactați.</p>
-  <p><strong>Dimensiuni:</strong></p>
-  <ul>
-    <li>Lungime Extinsă: 170 cm</li>
-    <li>Lungime Strânsă: 130 cm</li>
-    <li>Lățime: 80 cm</li>
-    <li>Înălțime: 76 cm</li>
-  </ul>
-  <p>Schelet metalic.</p>
-  <p><strong>Plata se face la primirea coletului după VERIFICARE.</strong></p>
-  <p class="contact">
-    📲 Telefon: <a href="tel:+407466645997">0746 664 597</a>, <a href="tel:+40745814800">0745 814 800</a>
-  </p>
-  <p><strong>💥💥🚛 Transport în toată țara! 💥</strong></p>
-</section>
+  <main>
 
-<section class="gallery">
-  <img src="poze/masa-sticla1.jpg" alt="Masa extensibilă 1" />
-  <img src="poze/masa-sticla2.jpg" alt="Masa extensibilă 2" />
-  <img src="poze/masa-sticla3.jpg" alt="Masa extensibilă 3" />
-  <img src="poze/masa-sticla4.jpg" alt="Masa extensibilă 4" />
-  <img src="poze/masa-sticla5.jpg" alt="Masa extensibilă 5" />
-  <img src="poze/masa-sticla6.jpg" alt="Masa extensibilă 6" />
-  <img src="poze/masa-sticla7.jpg" alt="Masa extensibilă 7" />
-  <img src="poze/masa-sticla8.jpg" alt="Masa extensibilă 8" />
-  <img src="poze/masa-sticla9.jpg" alt="Masa extensibilă 9" />
-  <img src="poze/masa-sticla10.jpg" alt="Masa extensibilă 10" />
-  <img src="poze/masa-sticla11.jpg" alt="Masa extensibilă 11" />
-  <img src="poze/masa-sticla12.jpg" alt="Masa extensibilă 12" />
-  <img src="poze/masa-sticla13.jpg" alt="Masa extensibilă 13" />
-  <img src="poze/masa-sticla14.jpg" alt="Masa extensibilă 14" />
-  <img src="poze/masa-sticla15.jpg" alt="Masa extensibilă 15" />
-  <img src="poze/masa-sticla16.jpg" alt="Masa extensibilă 16" />
-  <img src="poze/masa-sticla17.jpg" alt="Masa extensibilă 17" />
-  <img src="poze/masa-sticla18.jpg" alt="Masa extensibilă 18" />
-  <img src="poze/masa-sticla19.jpg" alt="Masa extensibilă 19" />
-  <img src="poze/masa-sticla20.jpg" alt="Masa extensibilă 20" />
-  <img src="poze/masa-sticla21.jpg" alt="Masa extensibilă 21" />
-  <img src="poze/masa-sticla22.jpg" alt="Masa extensibilă 22" />
-  <img src="poze/masa-sticla23.jpg" alt="Masa extensibilă 23" />
-  <img src="poze/masa-sticla24.jpg" alt="Masa extensibilă 24" />
-  <img src="poze/masa-sticla25.jpg" alt="Masa extensibilă 25" />
-  <img src="poze/masa-sticla26.jpg" alt="Masa extensibilă 26" />
-  <img src="poze/masa-sticla27.jpg" alt="Masa extensibilă 27" />
-  <img src="poze/masa-sticla28.jpg" alt="Masa extensibilă 28" />
-</section>
+    <section class="masa-info">
+      <h2>Detalii Masă și Scaune</h2>
+      <p><strong>Preț:</strong> 1150 Lei (transport și verificare incluse, livrare la domiciliu)</p>
 
-<!-- Buton WhatsApp fixat jos dreapta -->
-<a 
-  href="https://wa.me/40745814800" 
-  target="_blank" 
-  rel="noopener" 
-  class="whatsapp" 
-  aria-label="Contact WhatsApp">
-  <svg viewBox="0 0 24 24" >
-    <path d="M20.52 3.48a11.89 11.89 0 0 0-16.82 0 11.93 11.93 0 0 0-3.5 8.49c0 2.1.55 4.15 1.6 5.96L2 22l4.13-1.08a11.94 11.94 0 0 0 6.39 1.86h.02c6.59 0 11.95-5.36 11.95-11.96a11.94 11.94 0 0 0-3.97-8.34Zm-8.54 15.22a9.9 9.9 0 0 1-5.06-1.4l-.36-.22-3.08.8.82-3.02-.23-.36a9.88 9.88 0 0 1-1.52-5.41 9.94 9.94 0 0 1 17.2-6.8 9.94 9.94 0 0 1-7.03 16.58Zm5.4-7.68c-.3-.15-1.76-.87-2.03-.97-.27-.1-.47-.15-.67.15s-.77.97-.95 1.17-.35.22-.65.07a6.94 6.94 0 0 1-2.04-1.26 7.68 7.68 0 0 1-1.43-1.76c-.15-.27 0-.42.12-.56.12-.12.27-.31.4-.47.13-.16.18-.28.27-.47.09-.2.04-.37-.02-.52-.06-.15-.66-1.6-.9-2.2-.23-.57-.47-.5-.67-.51-.17 0-.37 0-.56 0-.18 0-.47.07-.72.36-.25.28-1 1-1 2.47 0 1.47 1.03 2.9 1.18 3.11.15.2 2.04 3.11 4.95 4.36.69.3 1.23.48 1.65.62.69.23 1.32.2 1.82.12.56-.1 1.76-.72 2.01-1.41.25-.7.25-1.3.18-1.41-.06-.12-.25-.2-.56-.35Z"/>
-  </svg>
-</a>
+      <ul>
+        <li>Lungime extinsă: 170 cm</li>
+        <li>Lungime strânsă: 130 cm</li>
+        <li>Lățime: 80 cm</li>
+        <li>Înălțime: 76 cm</li>
+        <li>Schelet metalic</li>
+      </ul>
 
+      <p><em>Plata se face la primirea coletului, după verificare.</em></p>
+
+      <p><strong>Transport în toată țara!</strong></p>
+
+      <p><strong>Telefon:</strong> 
+        <a href="tel:+407466645997">0746 664 597</a>, 
+        <a href="tel:+40745814800">0745 814 800</a>
+      </p>
+    </section>
+
+    <section class="gallery">
+      <img src="https://via.placeholder.com/250x150?text=Masă+1" alt="Masa extensibilă 1" />
+      <img src="https://via.placeholder.com/250x150?text=Masă+2" alt="Masa extensibilă 2" />
+      <img src="https://via.placeholder.com/250x150?text=Scaune" alt="Set scaune" />
+    </section>
+
+  </main>
+
+  <a 
+    class="whatsapp-button" 
+    href="https://wa.me/40745814800?text=Salut!%20Sunt%20interesat%20de%20setul%20de%20masa%20extensibila." 
+    target="_blank" 
+    aria-label="Contact WhatsApp"
+  >
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon" />
+  </a>
+
+  <script>
+    // Dacă vrei să adaugăm funcții JS pentru galerie sau alte interacțiuni, aici.
+    // Momentan totul e static și funcțional.
+  </script>
+  
 </body>
 </html>
