--- a/index.html
+++ b/index.html
@@ -3,173 +3,179 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Promoție Masă Extensibilă + Scaune</title>
+  <title>Slider și Contact WhatsApp</title>
   <style>
+    /* Reset simplu */
+    * {
+      box-sizing: border-box;
+    }
     body {
       font-family: Arial, sans-serif;
+      background: #f9f9f9;
       margin: 0; padding: 0;
-      background: #f0f0f0;
-      color: #222;
-    }
-
-    header {
-      background: #005a87;
-      color: white;
-      padding: 15px;
-      text-align: center;
-      font-size: 1.8em;
-      font-weight: bold;
-    }
-
-    main {
-      max-width: 900px;
-      margin: 30px auto;
-      background: white;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-
-    /* Secțiunea info masă */
-    .masa-info {
-      border: 2px solid #005a87;
-      padding: 20px;
-      border-radius: 10px;
-      background: #e6f2fb;
-      margin-bottom: 30px;
-    }
-
-    .masa-info h2 {
-      color: #004466;
-      margin-bottom: 15px;
-    }
-
-    .masa-info ul {
-      list-style-type: disc;
-      margin-left: 20px;
-      margin-bottom: 15px;
-    }
-
-    .masa-info p {
-      font-size: 1.1em;
-    }
-
-    .masa-info em {
-      color: #aa0000;
-      font-weight: bold;
-    }
-
-    .masa-info a {
-      color: #0077cc;
-      text-decoration: none;
-    }
-
-    .masa-info a:hover {
-      text-decoration: underline;
-    }
-
-    /* Galerie poze */
-    .gallery {
       display: flex;
-      gap: 15px;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin-bottom: 30px;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      padding: 20px;
     }
-
-    .gallery img {
-      max-width: 250px;
+    /* Slider container */
+    .slider {
+      position: relative;
+      width: 90%;
+      max-width: 600px;
+      height: 350px;
+      margin: 30px 0;
       border-radius: 10px;
-      border: 2px solid #ccc;
-      transition: transform 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      overflow: hidden;
+      background: #fff;
+    }
+    /* Slide imagini */
+    .slide {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: opacity 0.6s ease-in-out;
+      background-size: cover;
+      background-position: center;
+      border-radius: 10px;
+    }
+    .slide.active {
+      opacity: 1;
+      position: relative;
+      z-index: 1;
+    }
+    /* Butoane slider */
+    .prev, .next {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0,0,0,0.5);
+      border: none;
+      color: white;
+      font-size: 22px;
+      padding: 12px 16px;
       cursor: pointer;
+      border-radius: 4px;
+      user-select: none;
+      transition: background-color 0.3s ease;
+      z-index: 10;
     }
-
-    .gallery img:hover {
-      transform: scale(1.05);
-      border-color: #005a87;
+    .prev:hover, .next:hover {
+      background-color: rgba(0,0,0,0.8);
     }
-
-    /* Buton WhatsApp fixat jos-dreapta */
+    .prev {
+      left: 15px;
+    }
+    .next {
+      right: 15px;
+    }
+    /* Fade-in text */
+    .fade-in {
+      opacity: 0;
+      max-width: 600px;
+      margin: 15px auto;
+      font-size: 1.2rem;
+      color: #222;
+      text-align: center;
+      transition: opacity 1s ease-in-out;
+    }
+    .fade-in.visible {
+      opacity: 1;
+    }
+    /* WhatsApp contact button */
     .whatsapp-button {
       position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #25d366;
+      bottom: 25px;
+      right: 25px;
+      background-color: #25D366;
       border-radius: 50%;
       width: 60px;
       height: 60px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      cursor: pointer;
       display: flex;
       justify-content: center;
       align-items: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      cursor: pointer;
-      z-index: 1000;
       transition: background-color 0.3s ease;
+      z-index: 1000;
     }
-
     .whatsapp-button:hover {
-      background-color: #128c45;
+      background-color: #1ebe57;
     }
-
-    .whatsapp-button img {
-      width: 35px;
-      height: 35px;
+    /* WhatsApp icon SVG styling */
+    .whatsapp-icon {
+      fill: white;
+      width: 32px;
+      height: 32px;
     }
-
   </style>
 </head>
 <body>
 
-  <header>
-    Set Masa Extensibilă 3D cu Blat De Sticlă + 6 Scaune
-  </header>
+  <!-- Slider -->
+  <div class="slider" aria-label="Galerie imagini">
+    <div class="slide active" style="background-image: url('https://picsum.photos/id/1018/600/350');" aria-hidden="false"></div>
+    <div class="slide" style="background-image: url('https://picsum.photos/id/1015/600/350');" aria-hidden="true"></div>
+    <div class="slide" style="background-image: url('https://picsum.photos/id/1019/600/350');" aria-hidden="true"></div>
 
-  <main>
+    <button class="prev" aria-label="Slide anterior">&#10094;</button>
+    <button class="next" aria-label="Slide următor">&#10095;</button>
+  </div>
 
-    <section class="masa-info">
-      <h2>Detalii Masă și Scaune</h2>
-      <p><strong>Preț:</strong> 1150 Lei (transport și verificare incluse, livrare la domiciliu)</p>
+  <!-- Texte cu fade-in -->
+  <p class="fade-in">Bine ai venit pe pagina noastră! Vezi cele mai bune imagini în slider.</p>
+  <p class="fade-in">Pentru întrebări, contactează-ne rapid pe WhatsApp folosind butonul verde din dreapta jos.</p>
 
-      <ul>
-        <li>Lungime extinsă: 170 cm</li>
-        <li>Lungime strânsă: 130 cm</li>
-        <li>Lățime: 80 cm</li>
-        <li>Înălțime: 76 cm</li>
-        <li>Schelet metalic</li>
-      </ul>
-
-      <p><em>Plata se face la primirea coletului, după verificare.</em></p>
-
-      <p><strong>Transport în toată țara!</strong></p>
-
-      <p><strong>Telefon:</strong> 
-        <a href="tel:+407466645997">0746 664 597</a>, 
-        <a href="tel:+40745814800">0745 814 800</a>
-      </p>
-    </section>
-
-    <section class="gallery">
-      <img src="https://via.placeholder.com/250x150?text=Masă+1" alt="Masa extensibilă 1" />
-      <img src="https://via.placeholder.com/250x150?text=Masă+2" alt="Masa extensibilă 2" />
-      <img src="https://via.placeholder.com/250x150?text=Scaune" alt="Set scaune" />
-    </section>
-
-  </main>
-
-  <a 
-    class="whatsapp-button" 
-    href="https://wa.me/40745814800?text=Salut!%20Sunt%20interesat%20de%20setul%20de%20masa%20extensibila." 
-    target="_blank" 
-    aria-label="Contact WhatsApp"
-  >
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon" />
+  <!-- Buton WhatsApp fix -->
+  <a href="https://wa.me/40745814800" target="_blank" rel="noopener" class="whatsapp-button" aria-label="Contactează-ne pe WhatsApp">
+    <svg class="whatsapp-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <path d="M20.52 3.48a11.81 11.81 0 0 0-16.69 0c-4.62 4.62-4.62 12.13 0 16.75l-1.72 5.16 5.34-1.66a11.77 11.77 0 0 0 6.47 1.99c6.57 0 11.92-5.34 11.92-11.92a11.82 11.82 0 0 0-5.32-10.32Zm-8.42 16.2a8.8 8.8 0 0 1-4.65-1.33l-.33-.2-3.11.97 1.04-3.03-.22-.34a8.86 8.86 0 1 1 7.27 3.93Zm5.3-7.1c-.29-.14-1.7-.83-1.97-.92-.27-.1-.47-.14-.67.14-.2.29-.78.92-.95 1.11-.17.2-.34.22-.63.08-.29-.14-1.23-.45-2.35-1.44-.87-.77-1.46-1.73-1.63-2.02-.17-.29-.02-.44.13-.59.13-.13.29-.34.43-.5.14-.17.19-.29.29-.48.1-.2.05-.37-.02-.51-.07-.14-.67-1.61-.92-2.2-.24-.57-.48-.49-.67-.5-.17-.01-.37-.01-.57-.01-.2 0-.53.07-.81.37-.28.3-1.07 1.05-1.07 2.55 0 1.5 1.1 2.95 1.25 3.16.14.2 2.15 3.29 5.21 4.61.73.31 1.3.5 1.75.64.74.23 1.42.2 1.96.12.6-.1 1.7-.69 1.94-1.35.24-.66.24-1.22.17-1.35-.07-.13-.26-.2-.55-.35Z"/>
+    </svg>
   </a>
 
   <script>
-    // Dacă vrei să adaugăm funcții JS pentru galerie sau alte interacțiuni, aici.
-    // Momentan totul e static și funcțional.
+    document.addEventListener('DOMContentLoaded', () => {
+      // Slider funcțional
+      const slides = document.querySelectorAll('.slide');
+      const prevBtn = document.querySelector('.prev');
+      const nextBtn = document.querySelector('.next');
+      let currentIndex = 0;
+
+      function showSlide(index) {
+        slides.forEach((slide, i) => {
+          const isActive = i === index;
+          slide.classList.toggle('active', isActive);
+          slide.setAttribute('aria-hidden', !isActive);
+        });
+      }
+
+      function showNext() {
+        currentIndex = (currentIndex + 1) % slides.length;
+        showSlide(currentIndex);
+      }
+
+      function showPrev() {
+        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+        showSlide(currentIndex);
+      }
+
+      prevBtn.addEventListener('click', showPrev);
+      nextBtn.addEventListener('click', showNext);
+
+      // Initialize slider
+      showSlide(currentIndex);
+
+      // Fade-in text la încărcare
+      const fadeElements = document.querySelectorAll('.fade-in');
+      fadeElements.forEach((el, i) => {
+        setTimeout(() => {
+          el.classList.add('visible');
+        }, i * 400 + 100); // delay între ele
+      });
+    });
   </script>
-  
 </body>
 </html>
